--- a/package.json
+++ b/package.json
@@ -1,40 +1,51 @@
 {
-  "name": "demo_project",
-  "version": "1.0.0",
-  "description": "This project was bootstrapped with Fastify-CLI.",
-  "main": "app.ts",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "npm run build:ts && tsc -p test/tsconfig.json && c8 node --test -r ts-node/register \"test/**/*.ts\"",
-    "start": "npm run build:ts && fastify start -l info dist/app.js",
-    "build:ts": "tsc",
-    "watch:ts": "tsc -w",
-    "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
-    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@fastify/autoload": "^6.0.0",
-    "@fastify/sensible": "^6.0.0",
-    "fastify": "^5.0.0",
-    "fastify-cli": "^7.4.1",
-    "fastify-plugin": "^5.0.0",
-    "http-status": "^2.1.0",
-    "pg": "^8.16.3",
-    "sequelize": "^6.37.7"
-  },
-  "devDependencies": {
-    "@types/node": "^24.0.8",
-    "@types/pg": "^8",
-    "c8": "^10.1.2",
-    "concurrently": "^9.0.0",
-    "fastify-tsconfig": "^3.0.0",
-    "ts-node": "^10.4.0",
-    "typescript": "~5.9.2"
-  },
-  "packageManager": "yarn@1.22.22"
+    "name": "demo_project",
+    "version": "1.0.0",
+    "description": "This project was bootstrapped with Fastify-CLI.",
+    "main": "app.ts",
+    "directories": {
+        "test": "test"
+    },
+    "scripts": {
+        "test": "npm run build:ts && tsc -p test/tsconfig.json && c8 node --test -r ts-node/register \"test/**/*.ts\"",
+        "start": "npm run build:ts && fastify start -l info -p 4000 dist/app.js",
+        "build:ts": "tsc",
+        "watch:ts": "tsc -w",
+        "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
+        "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -p 4000 -P dist/app.js",
+        "format": "prettier --write \"src/**/*.{ts,js,json}\"",
+        "format:check": "prettier --check \"src/**/*.{ts,js,json}\""
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@apollo/server": "^5.2.0",
+        "@as-integrations/express4": "^1.1.2",
+        "@as-integrations/fastify": "^3.1.0",
+        "@fastify/autoload": "^6.0.0",
+        "@fastify/sensible": "^6.0.0",
+        "@graphql-tools/load-files": "^7.0.1",
+        "eslint-plugin-prettier": "^5.5.4",
+        "fastify": "^5.0.0",
+        "fastify-cli": "^7.4.1",
+        "fastify-plugin": "^5.1.0",
+        "graphql": "^16.12.0",
+        "http-status": "^2.1.0",
+        "pg": "^8.16.3",
+        "sequelize": "^6.37.7"
+    },
+    "devDependencies": {
+        "@sinclair/typebox": "^0.34.41",
+        "@types/node": "^24.0.8",
+        "@types/pg": "^8",
+        "c8": "^10.1.2",
+        "concurrently": "^9.0.0",
+        "eslint-config-prettier": "^10.1.8",
+        "fastify-tsconfig": "^3.0.0",
+        "prettier": "^3.7.4",
+        "ts-node": "^10.4.0",
+        "typescript": "~5.9.2"
+    },
+    "packageManager": "yarn@1.22.22"
 }
