feat: Implement core GraphQL API with Fastify, add WebSocket chat

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,20 @@
-# Port number
-PORT=
-# Client URL
-CLIENT_URL=
+# Server Configuration
+PORT=4000
+NODE_ENV=development
 
-#Postgres
-# Host of the Postgres DB
+# Database Configuration
 DB_HOST=
-# PORT of the Postgres DB
 DB_PORT=
-# Postgres Database Name
 DB_NAME=
-# Postgres username
 DB_USER=
-# Postgres password
 DB_PASSWORD=
+DB_DIALECT=
+
+# CORS Configuration (comma-separated origins)
+CORS_ORIGIN=http://localhost:3000
+
+# WebSocket Configuration
+WS_HEARTBEAT_INTERVAL=30000
+
+# Logging
+LOG_LEVEL=info
