--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "license": "ISC",
     "dependencies": {
         "@apollo/server": "^5.2.0",
-        "@as-integrations/express4": "^1.1.2",
         "@as-integrations/fastify": "^3.1.0",
         "@fastify/autoload": "^6.0.0",
+        "@fastify/cors": "^11.2.0",
         "@fastify/sensible": "^6.0.0",
+        "@fastify/websocket": "^11.2.0",
         "@graphql-tools/load-files": "^7.0.1",
-        "eslint-plugin-prettier": "^5.5.4",
+        "@graphql-tools/merge": "^9.0.0",
         "fastify": "^5.0.0",
         "fastify-cli": "^7.4.1",
         "fastify-plugin": "^5.1.0",
@@ -39,9 +40,11 @@
         "@sinclair/typebox": "^0.34.41",
         "@types/node": "^24.0.8",
         "@types/pg": "^8",
+        "@types/ws": "^8.18.1",
         "c8": "^10.1.2",
         "concurrently": "^9.0.0",
         "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
         "fastify-tsconfig": "^3.0.0",
         "prettier": "^3.7.4",
         "ts-node": "^10.4.0",
