Image upload in cloudinary feature

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "build:ts": "tsc",
         "watch:ts": "tsc -w",
         "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
-        "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -p 4000 -P dist/app.js",
+        "dev:start": "fastify start --ignore-watch=.ts$ --ignore-watch=uploads/ -w -l info -p 4000 -P dist/app.js",
         "format": "prettier --write \"src/**/*.{ts,js,json}\"",
         "format:check": "prettier --check \"src/**/*.{ts,js,json}\""
     },
@@ -24,23 +24,26 @@
         "@as-integrations/fastify": "^3.1.0",
         "@fastify/autoload": "^6.0.0",
         "@fastify/cors": "^11.2.0",
+        "@fastify/multipart": "^9.3.0",
         "@fastify/sensible": "^6.0.0",
-        "@fastify/websocket": "^11.2.0",
+        "@fastify/static": "^8.3.0",
         "@graphql-tools/load-files": "^7.0.1",
         "@graphql-tools/merge": "^9.0.0",
+        "cloudinary": "^2.8.0",
         "fastify": "^5.0.0",
         "fastify-cli": "^7.4.1",
         "fastify-plugin": "^5.1.0",
+        "fastify-socket.io": "^5.1.0",
         "graphql": "^16.12.0",
         "http-status": "^2.1.0",
         "pg": "^8.16.3",
-        "sequelize": "^6.37.7"
+        "sequelize": "^6.37.7",
+        "socket.io": "^4.8.3"
     },
     "devDependencies": {
         "@sinclair/typebox": "^0.34.41",
         "@types/node": "^24.0.8",
         "@types/pg": "^8",
-        "@types/ws": "^8.18.1",
         "c8": "^10.1.2",
         "concurrently": "^9.0.0",
         "eslint-config-prettier": "^10.1.8",
