--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ WS_HEARTBEAT_INTERVAL=30000
 
 # Logging
 LOG_LEVEL=info
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
