video calling feature

--- a/chat-client/.env.example
+++ b/chat-client/.env.example
@@ -1,2 +1,9 @@
 VITE_WS_URL=http://localhost:3000
 VITE_API_PORT=3000
+
+VITE_WEBRTC_ICE_SERVERS=[
+  {"urls":["stun:stun.l.google.com:19302"]},
+  {"urls":["turn:global.turn.metered.ca:80"],"username":"YOUR_METERED_USERNAME","credential":"YOUR_METERED_CREDENTIAL"},
+  {"urls":["turn:global.turn.metered.ca:443"],"username":"YOUR_METERED_USERNAME","credential":"YOUR_METERED_CREDENTIAL"},
+  {"urls":["turns:global.turn.metered.ca:443"],"username":"YOUR_METERED_USERNAME","credential":"YOUR_METERED_CREDENTIAL"}
+]
