--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Server Configuration
-PORT=4000
-NODE_ENV=development
+PORT="4000"
+NODE_ENV="development"
+CLIENT_URL="http://localhost:5173"
 
 # Database Configuration
 DB_HOST=
@@ -8,7 +9,6 @@ DB_PORT=
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
-DB_DIALECT=
 
 # CORS Configuration (comma-separated origins)
 CORS_ORIGIN=http://localhost:3000
@@ -19,7 +19,30 @@ WS_HEARTBEAT_INTERVAL=30000
 # Logging
 LOG_LEVEL=info
 
+
+# Redis
+REDIS_USERNAME=redis_username
+REDIS_PASSWORD=redis_password
+REDIS_HOST=redis_host
+REDIS_PORT=redis_port
+REDIS_URL=redis_url
+
 # Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
+
+# Google 0Auth
+CLIENT_ID=google_0auth_client_id
+CLIENT_SECRET=google_0auth_client_secret
+
+# Sentry
+SENTRY_DSN=
+
+# Observability
+# OpenTelemetry (OTLP HTTP). Typically points to an OpenTelemetry Collector.
+OTEL_EXPORTER_OTLP_ENDPOINT="http://localhost:4318"
+OTEL_SERVICE_NAME="freelance-platform"
+OTEL_SERVICE_VERSION="1.0.0"
+OTEL_METRIC_EXPORT_INTERVAL="60000"
+SENTRY_LOG_INIT="false"
