--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     },
     "scripts": {
         "test": "npm run build:ts && tsc -p test/tsconfig.json && c8 node --test -r ts-node/register \"test/**/*.ts\"",
-        "start": "npm run build:ts && fastify start -l info -p 4000 dist/app.js",
+        "start": "npm run build:ts && fastify start -l info -p $PORT -r dist/instrumentation.js dist/app.js",
         "build:ts": "tsc",
         "watch:ts": "tsc -w",
         "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
-        "dev:start": "fastify start --ignore-watch=.ts$ --ignore-watch=uploads/ -w -l info -p 4000 -P dist/app.js",
+        "dev:start": "fastify start --ignore-watch=.ts$ --ignore-watch=uploads/ -w -l info -p 4000 -r dist/instrumentation.js -P dist/app.js",
         "format": "prettier --write \"src/**/*.{ts,js,json}\"",
         "format:check": "prettier --check \"src/**/*.{ts,js,json}\""
     },
@@ -23,12 +23,27 @@
         "@apollo/server": "^5.2.0",
         "@as-integrations/fastify": "^3.1.0",
         "@fastify/autoload": "^6.0.0",
+        "@fastify/cookie": "^11.0.2",
         "@fastify/cors": "^11.2.0",
         "@fastify/multipart": "^9.3.0",
+        "@fastify/oauth2": "^8.1.2",
+        "@fastify/rate-limit": "^10.3.0",
         "@fastify/sensible": "^6.0.0",
         "@fastify/static": "^8.3.0",
         "@graphql-tools/load-files": "^7.0.1",
         "@graphql-tools/merge": "^9.0.0",
+        "@opentelemetry/api": "^1.9.0",
+        "@opentelemetry/auto-instrumentations-node": "^0.67.3",
+        "@opentelemetry/core": "^2.2.0",
+        "@opentelemetry/exporter-metrics-otlp-http": "^0.208.0",
+        "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
+        "@opentelemetry/resources": "^2.2.0",
+        "@opentelemetry/sdk-metrics": "^2.2.0",
+        "@opentelemetry/sdk-node": "^0.208.0",
+        "@opentelemetry/semantic-conventions": "^1.38.0",
+        "@sentry/node": "^10.32.1",
+        "@sentry/profiling-node": "^10.32.1",
+        "@socket.io/redis-adapter": "^8.3.0",
         "cloudinary": "^2.8.0",
         "fastify": "^5.0.0",
         "fastify-cli": "^7.4.1",
@@ -37,6 +52,7 @@
         "graphql": "^16.12.0",
         "http-status": "^2.1.0",
         "pg": "^8.16.3",
+        "redis": "^5.10.0",
         "sequelize": "^6.37.7",
         "socket.io": "^4.8.3"
     },
@@ -49,6 +65,7 @@
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
         "fastify-tsconfig": "^3.0.0",
+        "pino-pretty": "^13.0.0",
         "prettier": "^3.7.4",
         "ts-node": "^10.4.0",
         "typescript": "~5.9.2"
