fix: build 0auth errors

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Server Configuration
 PORT="4000"
 NODE_ENV="development"
-CLIENT_URL="http://localhost:5173"
+CLIENT_URL=
 
 # Database Configuration
 DB_HOST=
@@ -11,7 +11,7 @@ DB_USER=
 DB_PASSWORD=
 
 # CORS Configuration (comma-separated origins)
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=
 
 # WebSocket Configuration
 WS_HEARTBEAT_INTERVAL=30000
@@ -41,7 +41,7 @@ SENTRY_DSN=
 
 # Observability
 # OpenTelemetry (OTLP HTTP). Typically points to an OpenTelemetry Collector.
-OTEL_EXPORTER_OTLP_ENDPOINT="http://localhost:4318"
+OTEL_EXPORTER_OTLP_ENDPOINT=""
 OTEL_SERVICE_NAME="freelance-platform"
 OTEL_SERVICE_VERSION="1.0.0"
 OTEL_METRIC_EXPORT_INTERVAL="60000"
