--- a/chat-client/package.json
+++ b/chat-client/package.json
@@ -24,6 +24,7 @@
     "devDependencies": {
         "@eslint/js": "^9.39.1",
         "@tailwindcss/postcss": "^4.1.18",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.10.1",
         "@types/react": "^19.2.5",
         "@types/react-dom": "^19.2.3",
