--- a/.env.example
+++ b/.env.example
@@ -1,48 +1,61 @@
-# Server Configuration
-PORT="4000"
-NODE_ENV="development"
-CLIENT_URL=
+# ===========================================
+# ENVIRONMENT VARIABLES CONFIGURATION
+# Copy this file to .env and fill in your actual values
+# ===========================================
 
-# Database Configuration
-DB_HOST=
-DB_PORT=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
+# Server Configuration
+PORT=4000
+NODE_ENV=development
+CLIENT_URL=http://localhost:5173
+SERVER_URL=http://localhost:4000
+
+# Database Configuration (PostgreSQL)
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=your_database_name
+DB_USER=your_database_user
+DB_PASSWORD=your_database_password
+
+# JWT Configuration
+JWT_SECRET=your_super_secret_jwt_key_at_least_32_characters_long
+JWT_ACCESS_EXPIRATION_MINUTES=15
+JWT_REFRESH_EXPIRATION_HOURS=168
 
 # CORS Configuration (comma-separated origins)
-CORS_ORIGIN=
+CORS_ORIGIN=http://localhost:3000,http://localhost:5173
 
 # WebSocket Configuration
 WS_HEARTBEAT_INTERVAL=30000
 
-# Logging
+# Logging Configuration
 LOG_LEVEL=info
 
+# Redis Configuration (for session storage and caching)
+REDIS_USERNAME=your_redis_username
+REDIS_PASSWORD=your_redis_password
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_URL=redis://localhost:6379
 
-# Redis
-REDIS_USERNAME=redis_username
-REDIS_PASSWORD=redis_password
-REDIS_HOST=redis_host
-REDIS_PORT=redis_port
-REDIS_URL=redis_url
+# Cloudinary Configuration (for file uploads)
+# Get these from: https://cloudinary.com/console/
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
 
-# Cloudinary Configuration
-CLOUDINARY_CLOUD_NAME=your_cloud_name
-CLOUDINARY_API_KEY=your_api_key
-CLOUDINARY_API_SECRET=your_api_secret
+# Google OAuth Configuration
+# Get these from: https://console.cloud.google.com/apis/credentials
+CLIENT_ID=your_google_oauth_client_id
+CLIENT_SECRET=your_google_oauth_client_secret
 
-# Google 0Auth
-CLIENT_ID=google_0auth_client_id
-CLIENT_SECRET=google_0auth_client_secret
+# Sentry Configuration (for error tracking)
+# Get this from: https://sentry.io/settings/projects/
+SENTRY_DSN=your_sentry_dsn
 
-# Sentry
-SENTRY_DSN=
-
-# Observability
+# Observability Configuration
 # OpenTelemetry (OTLP HTTP). Typically points to an OpenTelemetry Collector.
-OTEL_EXPORTER_OTLP_ENDPOINT=""
-OTEL_SERVICE_NAME="freelance-platform"
-OTEL_SERVICE_VERSION="1.0.0"
-OTEL_METRIC_EXPORT_INTERVAL="60000"
-SENTRY_LOG_INIT="false"
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/metrics
+OTEL_SERVICE_NAME=freelance-platform
+OTEL_SERVICE_VERSION=1.0.0
+OTEL_METRIC_EXPORT_INTERVAL=60000
+SENTRY_LOG_INIT=false
