update ui and add firebase notification integration

--- a/chat-client/.env.example
+++ b/chat-client/.env.example
@@ -1,5 +1,6 @@
 VITE_WS_URL=http://localhost:3000
 VITE_API_PORT=3000
+VITE_API_URL=http://localhost:4000
 
 VITE_WEBRTC_ICE_SERVERS=[
   {"urls":["stun:stun.l.google.com:19302"]},
@@ -7,3 +8,12 @@ VITE_WEBRTC_ICE_SERVERS=[
   {"urls":["turn:global.turn.metered.ca:443"],"username":"YOUR_METERED_USERNAME","credential":"YOUR_METERED_CREDENTIAL"},
   {"urls":["turns:global.turn.metered.ca:443"],"username":"YOUR_METERED_USERNAME","credential":"YOUR_METERED_CREDENTIAL"}
 ]
+
+# FIrebase Configuration
+VITE_API_KEY=""
+VITE_PROJECT_ID=""
+VITE_AUTH_DOMAIN=""
+VITE_STORAGE_BUCKET=""
+VITE_MESSAGING_SENDER_ID=""
+VITE_APP_ID=""
+VITE_MEASUREMENT_ID=""
