--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,19 @@ CORS_ORIGIN=http://localhost:3000,http://localhost:5173
 # WebSocket Configuration
 WS_HEARTBEAT_INTERVAL=30000
 
+# FIrebase Configuration
+FIREBASE_TYPE=""
+FIREBASE_PROJECT_ID=""
+FIREBASE_PRIVATE_KEY_ID=""
+FIREBASE_PRIVATE_KEY=""
+FIREBASE_CLIENT_EMAIL=""
+FIREBASE_CLIENT_ID=""
+FIREBASE_AUTH_URI=""
+FIREBASE_TOKEN_URI=""
+FIREBASE_AUTH_PROVIDER_X509_CERT_URL=""
+FIREBASE_CLIENT_X509_CERT_URL=""
+FIREBASE_UNIVERSE_DOMAIN=""
+
 # Logging Configuration
 LOG_LEVEL=info
 
