--- a/chat-client/package.json
+++ b/chat-client/package.json
@@ -12,13 +12,13 @@
     "dependencies": {
         "axios": "^1.13.2",
         "clsx": "^2.1.1",
-        "date-fns": "^4.1.0",
+        "firebase": "^12.7.0",
+        "framer-motion": "^12.23.26",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "react-virtuoso": "^4.7.12",
         "socket.io-client": "^4.8.3",
         "tailwind-merge": "^3.4.0",
-        "use-debounce": "^10.0.6",
         "zustand": "^5.0.9"
     },
     "devDependencies": {
