--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "fastify-cli": "^7.4.1",
         "fastify-plugin": "^5.1.0",
         "fastify-socket.io": "^5.1.0",
+        "firebase-admin": "^13.6.0",
         "graphql": "^16.12.0",
         "http-status": "^2.1.0",
         "jsonwebtoken": "^9.0.3",
