--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
         "@fastify/rate-limit": "^10.3.0",
         "@fastify/sensible": "^6.0.0",
         "@fastify/static": "^8.3.0",
-        "@graphql-tools/load-files": "^7.0.1",
         "@graphql-tools/merge": "^9.0.0",
         "@opentelemetry/api": "^1.9.0",
         "@opentelemetry/auto-instrumentations-node": "^0.67.3",
@@ -49,7 +48,6 @@
         "@socket.io/redis-adapter": "^8.3.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.0.8",
-        "@types/uuid": "^11.0.0",
         "cloudinary": "^2.8.0",
         "fastify": "^5.0.0",
         "fastify-cli": "^7.4.1",
@@ -57,14 +55,12 @@
         "fastify-socket.io": "^5.1.0",
         "firebase-admin": "^13.6.0",
         "graphql": "^16.12.0",
-        "http-status": "^2.1.0",
         "jsonwebtoken": "^9.0.3",
         "pg": "^8.16.3",
         "redis": "^5.10.0",
         "sequelize": "^6.37.7",
         "socket.io": "^4.8.3",
-        "typescript": "~5.9.2",
-        "uuid": "^13.0.0"
+        "typescript": "~5.9.2"
     },
     "devDependencies": {
         "@types/pg": "^8",
